Fix star not showing correct value bug

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -101,6 +101,10 @@ input[type="radio"] {
     color: orange;
 }
 
+ {
+    pointer-events: none;
+}
+
 /* Result page */
 .search-result-container{
     display: flex;
